--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "element-ui": "2.0.11"
+    "element-ui": "2.0.11",
+    "axios": "0.17.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
