--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "element-ui": "2.0.11",
-    "axios": "0.17.1"
+    "axios": "0.17.1",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
