--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "vue-router": "^3.0.1",
     "element-ui": "2.0.11",
     "axios": "0.17.1",
-    "vuex": "3.0.1"
+    "vuex": "3.0.1",
+    "is_js": "0.9.0",
+    "underscore": "1.8.3",
+    "moment": "2.20.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
